# OpenApi_GW

./: .env.example  CLAUDE.md
apigw/: .gitignore  README.md  TESTING.md  pyproject.toml  requirements.txt  workfoot.md
apigw/.github/workflows/: ci.yml
apigw/admin/: app.py  audit.py  history.py  main.py  security.py
apigw/admin/static/: app.js  index.html  styles.css
apigw/config/: gateway.yaml  routes.yaml
apigw/deployments/: Dockerfile  docker-compose.yaml
apigw/deployments/kubernetes/: README.md
apigw/deployments/kubernetes/base/: 00-namespace.yaml  01-configmap.yaml  02-redis.yaml  03-mock.yaml  04-gateway.yaml  05-admin.yaml  06-hpa.yaml  07-pdb.yaml  08-admin-secrets.yaml  09-admin-runtime-pvc.yaml  10-admin-policy-config.yaml
apigw/deployments/monitoring/: README.md  grafana-dashboard-admin.json  prometheus-alerts.yaml  prometheus-rules.yaml
apigw/docs/: api_spec.md  architecture.md  operations_runbook.md
apigw/gateway/: app.py  main.py
apigw/gateway/adapters/: grpc_proxy.py  rest2grpc.py
apigw/gateway/config/: __init__.py  loader.py  settings.py  watcher.py
apigw/gateway/core/: context.py  pipeline.py  protocol_utils.py  proxy.py  redis.py  router.py
apigw/gateway/listeners/: grpc_listener.py  websocket_listener.py
apigw/gateway/observability/: logging.py  metrics.py  tracing.py
apigw/gateway/plugins/: base.py
apigw/gateway/plugins/auth/: apikey_plugin.py  jwt_plugin.py  mtls_plugin.py
apigw/gateway/plugins/circuitbreaker/: breaker_plugin.py
apigw/gateway/plugins/logging/: logging_plugin.py
apigw/gateway/plugins/ratelimit/: ratelimit_plugin.py
apigw/skills/: docx.skill  pdf.skill  pptx.skill  schedule.skill  xlsx.skill
apigw/tests/e2e/: test_admin_console_flow.py
apigw/tests/load/: README.md  rest_load_test.js
apigw/tests/unit/: conftest.py  test_admin_app.py  test_admin_security.py  test_config_loader.py  test_grpc_proxy.py  test_pipeline.py  test_plugins.py  test_protocol_utils.py  test_proxy.py  test_router.py
backend/: Dockerfile  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: order.py  (+12 more)
first_app/나의 첫 앱/: AI_하루코치_기획안.md  AI_하루코치_기획안_v2.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: docker-compose.prod.yml  docker-compose.yml  prometheus.yml
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/redis/: sentinel.conf
(+53 files in other folders)
