[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "open-api-gateway"
version = "0.1.0"
description = "A flexible, scalable, and stable Open API Gateway supporting REST, gRPC, WebSocket, and more"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Antigravity Engineering" }]
keywords = ["api-gateway", "rest", "grpc", "websocket", "proxy"]

[project.scripts]
oag-gateway = "gateway.main:main"
oag-admin   = "admin.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*", "admin*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
