[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "open-api-gateway"
version = "0.1.0"
description = "A flexible, scalable, and stable Open API Gateway supporting REST, gRPC, WebSocket, and more"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Antigravity Engineering" }]
keywords = ["api-gateway", "rest", "grpc", "websocket", "proxy"]

[project.scripts]
oag-gateway = "gateway.main:main"
oag-admin   = "admin.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*", "admin*"]

[tool.setuptools.package-data]
admin = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade
# B: bugbear, C4: comprehensions, ASYNC: async 안티패턴
select = ["E", "W", "F", "I", "UP", "B", "C4", "ASYNC"]
ignore = [
    "E501",   # line-length는 formatter가 처리
    "B008",   # FastAPI Depends() 패턴 허용
    "UP007",  # Optional[X] → X | None (점진적 전환)
]

[tool.ruff.lint.isort]
known-first-party = ["gateway", "admin"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
